# KTP-bot

./: .gitignore  Makefile  bot.py  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
data/: autocensor.json  autoresponder.json
exts/: autocensor.py  autoresponder.py  brotherhoodpoints.py
plugins/: autocensor.py  autoresponder.py
