[tool.poetry]
name = "ktp-bot"
version = "0.1.0"
description = ""
authors = ["jlgingrich <jlgingrich@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.9.1"
loguru = "^0.7.2"
disnake-ext-plugins = {git = "https://github.com/DisnakeCommunity/disnake-ext-plugins.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
